fixed scrollbar issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -70,7 +70,6 @@
 
 html {
   scroll-behavior: smooth;
-  overflow-y: scroll;
 }
 
 html,
